src/main/java/org/example/mobble/_util/error/ex/Exception400.java
package org.example.mobble._util.error.ex;

public class Exception400 extends RuntimeException {
    public Exception400(String message) {
        super(message);
    }
}
